<b>2010-10-24</b>

* New "All" option in Top X, implements More than Top 50 in "Top 10" section (3089206)
* Bugfix: Banner in miles instead of kilometers (3091634)

<b>2010-10-16</b>

* Dates and times can now be entered without separators (3074343)
* Bugfix: Error after connecting to facebook app (with different user) (3084823)

<b>2010-08-22</b>

* Bugfix: Password sometimes exposed in URL after login (2915139)
* SQL optimization for banner generation, user status up/downgrades

<b>2010-08-14</b>

* Facebook app reworked to use application tab instead of profile box

<b>2010-07-10</b>

* Bugfix: E-mail address validation is too strict (3026793)

<b>2010-06-15</b>

* Bugfix: Facebook fatal error when adding app (3014614)
* Bugfix: BHD (Belfast City Airport) won't display (3015921)

<b>2010-05-04</b>

* Feature: Automated password resets (2915137)
* Bugfix: Unable to change password (2918400)

<b>2010-04-24</b>

* Bugfix: Wrong airport listed in Analyze -> Airport Records (2982048)
* Bugfix: Arrival time overwritten if airports entered afterwards (2986989)
* YYYY-MM-DD format now used consistently for dates
* Test cases updated

<b>2010-04-15</b>

* Bugfix: Flight duration shown as NaN and won't allow saving the flt (2986974)

<b>2010-04-07</b>

* Bugfix: Trip edit/delete broken (2823849)
* Bugfix: DST computed correctly for first day

<b>2010-02-17</b>

* Fixes to SQL schema creation, data loader
* PHP backend revised to use $_GET/POST instead of $HTTP_GET/POST_VARS
* Updated OpenFlights widget documentation

<b>2010-02-08</b>

* Soft launch of OpenFlights widget

<b>2010-01-27</b>

* "Reset" tab added to Facebook app
* Bugfix: Facebook app now requires offline_access, stores session correctly
* Bugfix: Facebook should display distances based on user preferences (2931556)

<b>2010-01-14</b>

* Update and cleanup sql directory
* Remove GAD from distribution

<b>2010-01-13</b>

* Bugfix: Distance/duration display not getting cleared when exiting edit mode