@@ -1,3 +1,7 @@
+<b>2010-10-28</b>
+
+* Bugfix: CSV imports handled middle seats incorrectly sometimes
+
 <b>2010-10-24</b>
 
 * New "All" option in Top X, implements More than Top 50 in "Top 10" section (3089206)
